k8s/vendors/argo/templates/gateway.yaml
apiVersion: argoproj.io/v1alpha1
kind: Gateway
metadata:
  name: slack-gateway
  labels:
    # gateway controller with instanceId argo-events will process this gateway
    gateways.argoproj.io/gateway-controller-instanceid: argo-events
    # gateway controller will use this label to match with it's own version
    # do not remove
    argo-events-gateway-version: v0.10
spec:
  type: slack
  eventSource: slack-event-source
  processorPort: "9330"
  eventProtocol:
    type: HTTP
    http:
      port: "9300"
  template:
    metadata:
      name: slack-gateway
      labels:
        gateway-name: slack-gateway
    spec:
      containers:
        - name: gateway-client
          image: argoproj/gateway-client:v0.9.2
          imagePullPolicy: Always
          command:
            - /bin/gateway-client
        - name: slack-events
          image: argoproj/slack-gateway:v0.9.2
          imagePullPolicy: Always
          command:
            - /bin/slack-gateway
      serviceAccountName: argo-events-sa
  service:
    metadata:
      name: slack-gateway-svc
    spec:
      selector:
        gateway-name: slack-gateway
      ports:
        - port: 12000
          targetPort: 12000
          nodePort: 31000
      type: NodePort
  watchers:
    sensors:
      - name: slack-sensor
